--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@
     --border-color: #EEEEEE;
     --border-client-color: #AFB1B8;
     --adress-icon-color: rgba(255, 255, 255, 0.1);
+    --top-texbgnd-color: rgba(33, 150, 243, 0.9);
+    --backdrop-color: rgba(0, 0, 0, 0.2);
 }
 
 body {
@@ -130,6 +132,17 @@ img {
 
 .site-nav .link.current {
     color: var(--accent-color);
+}
+
+.site-nav .link.current::after {
+    content: '';
+    display: flex;
+    background-color: var(--accent-color);
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    transform: translateY(32px);
+    position: relative;
 }
 
 .contacts {
@@ -470,7 +483,8 @@ img {
     margin-right: 30px;
     margin-bottom: 30px;
     background-color: var(--white-color);
-    border: 1px solid var(--border-color)
+    border: 1px solid var(--border-color);
+    position: relative;
 }
 
 .project .item:nth-child(3n) {
@@ -509,6 +523,28 @@ img {
 
 .project .content {
     padding: 20px 24px 20px 24px;
+}
+
+.project .top-text {
+    font-size: 18px;
+    line-height: 28px;
+    color: var(--white-color);
+    background-color: var(--top-texbgnd-color);
+    position: absolute;
+    top: 0;
+    margin: 0;
+    padding: 63px 24px;
+    transform: translateY(100%);
+    transition: transform 250ms linear;
+}
+
+.project-top {
+    position: relative;
+    overflow: hidden;
+}
+
+.project-top:hover .top-text {
+    transform: translateY(0);
 }
 
 /* Footer */
@@ -619,3 +655,57 @@ img {
 
 .address-soc-icon {
     fill: var(--white-color);
+}
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    background-color: var(--backdrop-color);
+    position: fixed;
+    top: 0;
+    transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.modal {
+    width: 528px;
+    height: 581px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: var(--white-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms linear;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0);
+}
+
+.modal-close {
+    width: 30px;
+    height: 30px;
+    background-color: var(--white-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.modal-close:hover, .modal-close:focus {
+    background-color: var(--accent-color);
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+  
