--- a/css/styles.css
+++ b/css/styles.css
@@ -448,7 +448,7 @@ img {
 .button.primary:focus {
     color: var(--white-color);
     background-color: var(--activ-btn-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
 }
 
@@ -468,7 +468,7 @@ img {
     color: var(--white-color);
     background-color: var(--accent-color);
     cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Filters */
@@ -510,7 +510,7 @@ img {
 
 .project .link:hover, 
 .project .link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project .link {
@@ -549,7 +549,7 @@ img {
     margin: 0;
     padding: 63px 24px;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-top {
@@ -559,7 +559,7 @@ img {
 
 .project-link:hover .top-text {
     transform: translateY(0);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Footer */
@@ -614,7 +614,7 @@ img {
 .tel-link .link:hover,
 .tel-link .link:focus {
     color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list .link {
@@ -628,7 +628,7 @@ img {
 .mail-link .link:hover, 
 .mail-link .link:focus {
     color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Social networks */
@@ -668,7 +668,7 @@ img {
 .address-soc-link:hover,
 .address-soc-link:focus {
     background-color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-soc-icon {
@@ -720,7 +720,7 @@ img {
 
 .modal-close:hover {
     fill: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
