--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ img {
 
     padding-top: 32px;
     padding-bottom: 32px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link:hover, 
@@ -171,7 +171,7 @@ img {
     align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts .link:hover,
@@ -239,7 +239,7 @@ img {
     border-radius: 4px;
     background-color: var(--primary-btn-color);
     margin-bottom: 30px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: drop-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .feature-box:hover, 
@@ -369,7 +369,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-link:hover, 
@@ -385,7 +385,7 @@ img {
 
 .team-soc-icon {
     fill: var(--border-client-color);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*Clients*/
@@ -408,17 +408,17 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.client-link:hover,
+.client-link:focus {
+    border-color: var(--accent-color);
 }
 
 .client-soc-icon {
     fill: var(--border-client-color);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-link:hover, 
-.client-link:focus {
-    border-color: var(--accent-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover .client-soc-icon, 
@@ -442,7 +442,7 @@ img {
     padding: 10px 32px;
     border-radius: 4px;
     background-color: var(--accent-color);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.primary:hover,
@@ -461,7 +461,7 @@ img {
     padding: 6px 22px;
     min-width: 73px;
     border-radius: 4px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.secondary:hover,
@@ -511,12 +511,13 @@ img {
 
 .project .link:hover, 
 .project .link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project .link {
     display: block;
     text-decoration: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project .title {
@@ -550,7 +551,7 @@ img {
     margin: 0;
     padding: 63px 24px;
     transform: translateY(100%);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-top {
@@ -605,12 +606,17 @@ img {
 .mail-link .link {
     margin-top: 0;
     margin-bottom: 9px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mail-link .link:hover,
+.mail-link .link:focus {
+    color: var(--accent-color);
 }
 
 .tel-link .link {
     margin-bottom: 0;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tel-link .link:hover,
@@ -624,11 +630,6 @@ img {
     line-height: 1.71;
     color: var(--basement-text-color);
     text-decoration: none;
-}
-
-.mail-link .link:hover, 
-.mail-link .link:focus {
-    color: var(--accent-color);
 }
 
 /* Social networks */
@@ -663,7 +664,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-soc-link:hover,
@@ -716,11 +717,11 @@ img {
     background-color: transparent;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover {
     fill: var(--accent-color);
-    transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
